# sget

./: .travis.yml  CMakeLists.txt  README.md  genman.sh  make.sh  sget  sget.1
.github/ISSUE_TEMPLATE/: config.yml
tests/: test001  test002  test003
